umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_dummyArom.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 5
bond_count: 5
sum_formula: C3N
graph6: Dhc
