umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_github188_2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 24
sum_formula: C17Cl4O3-1
graph6: "W`cJ?C??W?_??P??_?G????K??G??G?????D???G?G???_?"
