umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_hs_crash.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 48
bond_count: 50
sum_formula: C21H23NO3
graph6: opCGOCA?H@?@C???_?G?A??C??G??G??G??@??CG???_??C???@???@????_???@????G????_????G????G????C?????G????@?????C?????@?????@??????_?????@??????G??????_??A??????????C??G???????????K?C????????????@
